<resources>
    <string name="app_name">Code_Barre</string>
    <string name="button">Scan</string>
    <string name="Auteur">Auteur :</string>
    <string name="Annee">Annee :</string>
    <string name="Langue">Langue :</string>
    <string name="Collection">Collection :</string>
    <string name="Editeur">Editeur :</string>
    <string name="ASIN">ASIN :</string>
    <string name="Titre">Titre :</string>
</resources>
